# RacingGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run_build.bat  vcpkg.json
src/app/: Application.cpp  Application.h  RendererSFML.cpp  RendererSFML.h
src/core/: GameModel.cpp  GameModel.h  InputSnapshot.h
src/core/track/: CircleTrack.cpp  CircleTrack.h  ITrack.h  StraightTrack.cpp  StraightTrack.h  TrackSample.h
src/core/vehicle/: Vehicle.cpp  Vehicle.h
src/math/: Vec2.h
